2006-10-05 [ticho]	0.6.1cvs4

	* src/feed.c
		Fix for gcc2.x. Spotted by <c0rn at o2.pl>.

2006-10-04 [wwp]	0.6.1cvs3

	* src/rssyl_prefs.c
		Remove label's trailing ':' in prefs. Suggested by
		Fabien Vantard <fzzzzz@gmail.com>.

2006-09-28 [colin]	0.6.1cvs2

	* src/feed.c
		Get rid of g_strsplit and g_strconcat in 
		potentially big items, and in while loops.
		Use zero-copy for the split, and realloc
		for the concatenation. 40% less CPU usage 
		than previously. Valgrinded, Callgrinded.

2006-09-28 [colin]	0.6.1cvs1

	* src/strreplace.c
		Optimize rssyl_strreplace(). strncat is slow because it
		has to walk to the end of the string each time it's called.
		It's called 330.000 times when refreshing a 300 items feed,
		thus making a nice O(n^2) algo.
		Use string walking instead. Down from 31% execution time
		in rssyl_strreplace(), to 1.18% :-) (start, refresh feed,
		exit).

2006-09-25 [paul]	0.6.1

	0.6.1 released

2006-09-25 [paul]	0.6.0cvs25

	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/pt_BR.po
	* po/sk.po
		updated by Stephan Sachse, Ricardo Mones Lastra,
		Flammie Pirinen, Fabien Vantard, Frederico Goncalves
		Guimaraes, and Andrej Kacian

2006-09-24 [colin]	0.6.0cvs24

	* src/rssyl.c
	* src/rssyl_gtk.c
		Include main.h for sylpheed_is_exiting()

2006-09-23 [colin]	0.6.0cvs23

	* src/feed.c
		Always put Message-Id

2006-09-23 [colin]	0.6.0cvs22

	* src/rssyl.c
	* src/rssyl_gtk.c
		Don't do gtk stuff on exit

2006-09-22 [ticho]	0.6.0cvs21

	* configure.ac
		Upgrade required sylpheed-claws version to 2.4.0.200
	* src/parsers.c
		Remove unneeded static prototype declaration.
	* src/feed.c
	* src/feedprops.c
	* src/rssyl.c
		Fix automatic refreshing for feeds with default interval set.

2006-09-22 [ticho]	0.6.0cvs20

	* src/feed.c
		Replace "&mdash;" with "-".

2006-09-21 [colin]	0.6.0cvs19

	* src/feed.c
	* src/feed.h
	* src/parsers.c
	* src/strreplace.c
		Fix feeds that mark themselves unread for real